WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12818
REGRESSION (
r19148
): shacknews.com does not render completely
https://bugs.webkit.org/show_bug.cgi?id=12818
Summary
REGRESSION (r19148): shacknews.com does not render completely
Antti Koivisto
Reported
2007-02-19 15:10:44 PST
Only top part of the page is rendered. Works fine with Tiger WebKit.
Attachments
reduction
(1.17 KB, text/html)
2007-02-20 10:40 PST
,
Antti Koivisto
no flags
Details
Further reduction
(1.09 KB, text/html)
2007-02-20 11:26 PST
,
mitz
no flags
Details
Patch
(83.16 KB, patch)
2007-02-21 01:37 PST
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-02-19 16:01:23 PST
The first time I clicked the link it rendered fine. The when I loaded it again it rendered only partially. Forcing a reload fixed it.
mitz
Comment 2
2007-02-19 16:03:35 PST
If I disable JavaScript, I can't reproduce the bug.
Jeff McGlynn
Comment 3
2007-02-19 18:35:40 PST
This bug only occurs occasionally, and when it does the rendering problem is fixed by resizing the window. The source of the page doesn't cause it, so I believe the problem is due to a specific ad, most likely the skyscraper ad on the left of the page.
Antti Koivisto
Comment 4
2007-02-20 10:40:26 PST
Created
attachment 13276
[details]
reduction Here is a partial reduction. Changing almost anything on this page will make the bug disappear. It still depends on an ad script from external server. Using local script hides the bug too.
mitz
Comment 5
2007-02-20 11:26:14 PST
Created
attachment 13277
[details]
Further reduction The green square doesn't appear until you force relayout (e.g. by resizing the window). Removing the intermediate layout (the document.body.offsetTop; line) makes the bug go away.
mitz
Comment 6
2007-02-20 11:36:10 PST
The test case works in
r19136
but not in
r19186
.
mitz
Comment 7
2007-02-20 15:18:05 PST
I broke this in <
http://trac.webkit.org/projects/webkit/changeset/19148
> (fix for
bug 10983
). I have a patch here <
http://paste.lisp.org/display/37138
>.
mitz
Comment 8
2007-02-21 01:37:59 PST
Created
attachment 13290
[details]
Patch
Dave Hyatt
Comment 9
2007-02-21 16:39:27 PST
Comment on
attachment 13290
[details]
Patch r=me
Sam Weinig
Comment 10
2007-02-21 19:10:05 PST
Landed in
r19784
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug