WebCore/rendering/RenderBlock.cpp
@@ -888,7 +888,7 @@ void RenderBlock::collapseMargins(RenderObject* child, MarginInfo& marginInfo, i
             // When the child shifts to clear an item, its width can
             // change (because it has more available line width).
             // So go ahead and mark the item as dirty.
-            child->setChildNeedsLayout(true);
+            child->setChildNeedsLayout(true, false);
 
         if (!child->avoidsFloats() && child->containsFloats())
             child->markAllDescendantsWithFloatsForLayout();
@@ -943,7 +943,7 @@ void RenderBlock::clearFloatsIfNeeded(RenderObject* child, MarginInfo& marginInf
             // When the child shifts to clear an item, its width can
             // change (because it has more available line width).
             // So go ahead and mark the item as dirty.
-            child->setChildNeedsLayout(true);
+            child->setChildNeedsLayout(true, false);
         if (!child->avoidsFloats() && child->containsFloats())
             child->markAllDescendantsWithFloatsForLayout();
         child->layoutIfNeeded();
@@ -1096,7 +1096,7 @@ void RenderBlock::layoutBlockChildren(bool relayoutChildren)
         // FIXME: Technically percentage height objects only need a relayout if their percentage isn't going to be turned into
         // an auto value.  Add a method to determine this, so that we can avoid the relayout.
         if (relayoutChildren || (child->style()->height().isPercent() || child->style()->minHeight().isPercent() || child->style()->maxHeight().isPercent()))
-            child->setChildNeedsLayout(true);
+            child->setChildNeedsLayout(true, false);
 
         // Handle the four types of special elements first.  These include positioned content, floating content, compacts and
         // run-ins.  When we encounter these four types of objects, we don't actually lay them out as normal flow blocks.
@@ -1123,7 +1123,7 @@ void RenderBlock::layoutBlockChildren(bool relayoutChildren)
         if (!child->avoidsFloats() || child->shrinkToAvoidFloats()) {
             int fb = floatBottom();
             if (fb > m_height || fb > yPosEstimate)
-                child->setChildNeedsLayout(true);
+                child->setChildNeedsLayout(true, false);
         }
 
         // Cache our old rect so that we can dirty the proper repaint rects if the child moves.
