WebCore/rendering/RenderBox.cpp
@@ -1456,7 +1456,7 @@ void RenderBox::setStaticY(int staticY)
         return;
     
     m_staticY = staticY;
-    setChildNeedsLayout(true);
+    setChildNeedsLayout(true, false);
 }
 
 int RenderBox::containingBlockWidthForPositioned(const RenderObject* containingBlock) const
